<resources>
    <string name="app_name">Rick and Morty</string>
    <string name="character_list">Character list</string>
    <string name="character_image">Character Image</string>
    <string name="next">next</string>
    <string name="page">Page</string>
    <string name="before">before</string>
    <string name="info_page">Info page</string>
    <string name="gender">Gender</string>
    <string name="race">Race</string>
    <string name="origin_location">Origin location</string>
    <string name="location">Location</string>
    <string name="print">Print</string>
    <string name="status">Status</string>
    <string name="save_card">Save card</string>
    <string name="card_preview">Card preview</string>
    <string name="back">back</string>
</resources>