<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:enabled="false"
        android:title="@string/info_page"
        app:actionLayout="@layout/view_info_page"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/before"
        android:contentDescription="@string/before"
        android:enabled="false"
        android:icon="@drawable/ic_round_navigate_before_24"
        android:title="@string/before"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/next"
        android:contentDescription="@string/next"
        android:enabled="false"
        android:icon="@drawable/ic_round_navigate_next_24"
        android:title="@string/next"
        app:showAsAction="ifRoom" />
</menu>