<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <!-- Scrollable content -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="?android:attr/colorBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="75dp"
                android:contentDescription="@string/character_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@mipmap/image_unknown" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image"
                tools:text="Rick Sanchez" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="@color/onBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name"
                tools:text="Alive"
                tools:textColor="@android:color/holo_green_light" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/status">


                <TextView
                    android:id="@+id/gender_title"
                    style="@style/TitleText"
                    android:text="@string/gender"
                    app:layout_constraintEnd_toStartOf="@id/race_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/race_title"
                    style="@style/TitleText"
                    android:text="@string/race"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/gender_title"
                    app:layout_constraintTop_toTopOf="@+id/gender_title" />

                <TextView
                    android:id="@+id/gender"
                    style="@style/BodyText"
                    app:layout_constraintEnd_toStartOf="@id/race"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gender_title"
                    tools:text="Male" />

                <TextView
                    android:id="@+id/race"
                    style="@style/BodyText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/gender"
                    app:layout_constraintTop_toTopOf="@+id/gender"
                    tools:text="Human" />

                <TextView
                    android:id="@+id/origin_title"
                    style="@style/TitleText"
                    android:layout_marginTop="16dp"
                    android:text="@string/origin_location"
                    app:layout_constraintEnd_toStartOf="@id/location_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gender" />

                <TextView
                    android:id="@+id/location_title"
                    style="@style/TitleText"
                    android:text="@string/location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/origin_title"
                    app:layout_constraintTop_toTopOf="@+id/origin_title" />

                <TextView
                    android:id="@+id/origin"
                    style="@style/BodyText"
                    app:layout_constraintEnd_toStartOf="@id/location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/origin_title"
                    tools:text="Earth (C-137)" />

                <TextView
                    android:id="@+id/location"
                    style="@style/BodyText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/origin"
                    app:layout_constraintTop_toTopOf="@+id/origin"
                    tools:text="Citadel of Ricks" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#1F808080"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/info" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/episodes_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separator"
                tools:listitem="@layout/item_episode" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#00734747"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_round_arrow_back_24" />

</androidx.constraintlayout.widget.ConstraintLayout>